--- a/Settings/NoAnnoyance.plist
+++ b/Settings/NoAnnoyance.plist
@@ -39,6 +39,20 @@
 			<key>default</key>
 			<true/>
 			<key>key</key>
+			<string>CELLULAR_DATA_IS_TURNED_OFF_FOR_APP_NAME</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>PostNotification</key>
+			<string>com.pNre.noannoyance/settingsupdated</string>
+			<key>label</key>
+			<string>Cellular data is turned off for...</string>
+			<key>defaults</key>
+			<string>com.pNre.noannoyance</string>
+		</dict>
+		<dict>
+			<key>default</key>
+			<true/>
+			<key>key</key>
 			<string>AIRPLANE_CELL_PROMPT</string>
 			<key>cell</key>
 			<string>PSSwitchCell</string>
@@ -74,8 +88,6 @@
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Accessories</string>
-			<key>footerText</key>
-			<string>NoAnnoyance is a pNre production.</string>
 			<key>isStaticText</key>
 			<true/>
 		</dict>
@@ -90,6 +102,30 @@
 			<string>com.pNre.noannoyance/settingsupdated</string>
 			<key>label</key>
 			<string>Cable not certified</string>
+			<key>defaults</key>
+			<string>com.pNre.noannoyance</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Battery</string>
+			<key>footerText</key>
+			<string>NoAnnoyance is a pNre production.</string>
+			<key>isStaticText</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>LOW_BATTERY_ALERT</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>PostNotification</key>
+			<string>com.pNre.noannoyance/settingsupdated</string>
+			<key>label</key>
+			<string>Low battery alert</string>
 			<key>defaults</key>
 			<string>com.pNre.noannoyance</string>
 		</dict>
