--- a/noannoyanceprefs/Resources/NoAnnoyance.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyance.plist
@@ -7,6 +7,20 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>WorksInFullScreen</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>PostNotification</key>
+			<string>com.pNre.noannoyance/settingsupdated</string>
+			<key>label</key>
+			<string>Works in fullscreen apps</string>
+			<key>defaults</key>
+			<string>com.pNre.noannoyance</string>
+		</dict>
+		<dict>
 			<key>isController</key>
 			<true/>
 			<key>cell</key>
