Fixed deb control file to show icon in Cydia

--- a/control
+++ b/control
@@ -8,4 +8,4 @@ Depiction: http://repo.pnre.co.vu/depics/noannoyance/
 Maintainer: pNre <pnre00+noannoyance@gmail.com>
 Author: pNre <pnre00+noannoyance@gmail.com>
 Section: Tweaks
-Icon: file:///Library/PreferenceLoader/Preferences/NoAnnoyance/NoAnnoyance@2x.png
+Icon: file:///Library/PreferenceBundles/NoAnnoyancePrefs.bundle/NoAnnoyance@2x.png
