--- a/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>title</key>
-	<string>Alerts</string>
+	<string>SpringBoard</string>
 	<key>items</key>
 	<array>
 		<dict>
