Option to silence Siri alerts

--- a/NoAnnoyance.plist
+++ b/NoAnnoyance.plist
@@ -1,8 +1,12 @@
 {
 	Filter = {
+		Mode = Any;
 		Bundles = (
 			"com.apple.mobilemail",
 			"com.apple.springboard",
+		);
+		Executables = (
+			assistantd,
 		);
 	};
 }
