--- a/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
@@ -168,6 +168,28 @@
 			<key>defaults</key>
 			<string>com.pNre.noannoyance</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Icons</string>
+			<key>isStaticText</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>default</key>
+			<false/>
+			<key>key</key>
+			<string>UPDATED_APP_DOT</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>PostNotification</key>
+			<string>com.pNre.noannoyance/settingsupdated</string>
+			<key>label</key>
+			<string>Updated dot</string>
+			<key>defaults</key>
+			<string>com.pNre.noannoyance</string>
+		</dict>
 	</array>
 </dict>
 </plist>
