--- a/noannoyanceprefs/Resources/NoAnnoyanceSRSettings.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyanceSRSettings.plist
@@ -7,6 +7,8 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>footerText</key>
+			<string>* A respring is needed to apply changes</string>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
