--- a/control
+++ b/control
@@ -1,7 +1,7 @@
 Package: com.pNre.noannoyance
 Name: NoAnnoyance
-Depends: mobilesubstrate, preferenceloader, firmware (>= 7)
-Version: 0.1.3
+Depends: mobilesubstrate, preferenceloader, firmware (>= 7), applist (>= 1.5)
+Version: 0.2.0~beta1
 Architecture: iphoneos-arm
 Description: Tame iOS annoying alerts!
 Depiction: http://repo.pnre.co.vu/depics/noannoyance/
