--- a/noannoyanceprefs/Resources/NoAnnoyance.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyance.plist
@@ -7,6 +7,12 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>headerCellClass</key>
+			<string>NoAnnoyanceHeader</string>
+		</dict>
+		<dict>
 			<key>default</key>
 			<true/>
 			<key>key</key>
@@ -165,16 +171,6 @@
 			<string>Game Center</string>
 			<key>detail</key>
 			<string>NoAnnoyanceGCSettingsListController</string>
-		</dict>
-		<dict>
-			<key>isController</key>
-			<true/>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>label</key>
-			<string>Siri</string>
-			<key>detail</key>
-			<string>NoAnnoyanceSRSettingsListController</string>
 		</dict>
 		<dict>
 			<key>cell</key>
