--- a/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
+++ b/noannoyanceprefs/Resources/NoAnnoyanceSBSettings.plist
@@ -100,21 +100,7 @@
 		</dict>
 		<dict>
 			<key>default</key>
-			<true/>
-			<key>key</key>
-			<string>UNSUPPORTED_CHARGING_ACCESSORY</string>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>PostNotification</key>
-			<string>com.pNre.noannoyance/settingsupdated</string>
-			<key>label</key>
-			<string>Accessory not supported</string>
-			<key>defaults</key>
-			<string>com.pNre.noannoyance</string>
-		</dict>
-		<dict>
-			<key>default</key>
-			<true/>
+			<false/>
 			<key>key</key>
 			<string>ACCESSORY_UNRELIABLE</string>
 			<key>cell</key>
